[package]
name = "slint-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.1.1"
parser = { path = "../pdf-parser", package = "pdf-parser" }

[[bin]]
name = "main"
path = "src/main.rs"


